--- a/views/admin/addCategory.ejs
+++ b/views/admin/addCategory.ejs
@@ -85,7 +85,7 @@
         <div class="main-content">
             <div class="header">
                 <h1>RevGear</h1>
-                <a href="/admin/dashboard" id="adminlogout">Back</a>
+                <a href="/admin/category" id="adminlogout">Back</a>
             </div>
             
             <div class="add-category">
