--- a/views/admin/reports.ejs
+++ b/views/admin/reports.ejs
@@ -84,7 +84,7 @@
        <div class="main-content p-8">
         <div class="header">
             <h1>RevGear</h1>
-            <a href="/admin/dashboard" id="adminlogout">Back</a>
+            <a href="/admin/salesreport" id="adminlogout">Back</a>
         </div>
        
     
