--- a/views/admin/editCategory.ejs
+++ b/views/admin/editCategory.ejs
@@ -54,7 +54,7 @@
         <div class="main-content">
             <div class="header">
                 <h1>Edit Category</h1>
-                <a href="/admin/dashboard" id="adminlogout">Back</a>
+                <a href="/admin/category" id="adminlogout">Back</a>
             </div>
 
             <div class="add-category">
