--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -114,7 +114,7 @@
         <div class="main-content">
             <div class="header">
                 <h1>RevGear</h1>
-                <a href="/admin/dashboard" id="adminlogout">Back</a>
+                <a href="/admin/product" id="adminlogout">Back</a>
             </div>
       <br>
       <div class="add-product-container">
